# nssa-netlens

./: .gitignore  README.md  debug_tracer.py
.claude/: settings.local.json
.opencode/: skills_summary.md
.opencode/pcap-mcp/: SKILL.md
backend/: build_backend.sh  pcap-server.spec  pyproject.toml
backend/src/pcap_analyzer/: analyzer.py  cli.py  link_tracer.py  mcp_server.py  multi_analyzer.py  tshark.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/electron/: main.js  preload.js
frontend/src/: AboutModal.jsx  AiChatSidebar.css  AiChatSidebar.jsx  App.css  App.jsx  CorrelationPanel.css  CorrelationPanel.jsx  DiagnosticsPanel.css  DiagnosticsPanel.jsx  DnsPanel.css  DnsPanel.jsx  HttpPanel.css  HttpPanel.jsx  LinkTracePanel.css  LinkTracePanel.jsx  PacketDetailTree.css  PacketDetailTree.jsx  ReportExport.css  ReportExport.jsx  SearchBar.css  SearchBar.jsx  SequenceDiagram.css  SequenceDiagram.jsx  SettingsModal.css  SettingsModal.jsx  Sidebar.css  TlsPanel.css  TlsPanel.jsx  Toast.css  Toast.jsx  icons.jsx  index.css
frontend/src/components/: CompactPageHeader.css  CompactPageHeader.jsx  PacketTable.jsx  ProgressOverlay.css  ProgressOverlay.jsx
frontend/src/utils/: errorHandler.js
scripts/: generate_icons.sh
tests/: check_tshark.py  gen_reset.py  generate_attack.py  test_mcp_integration.py
