[project]
name = "pcap-analyzer"
version = "0.1.0"
description = "PCAP file analysis backend for Mac PCAP Analyzer"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.scripts]
pcap-analyzer = "pcap_analyzer.cli:main"
pcap-mcp = "pcap_analyzer.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pcap_analyzer"]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]
